Ups the z-index on the Post Gallery Widget back-forward buttons, to ensure they're always usable. See #394

--- a/wp-content/themes/citytech/style.css
+++ b/wp-content/themes/citytech/style.css
@@ -874,6 +874,7 @@ dd p{line-height:120%}
 }
 a#pgw-prev, a#pgw-next {
 	height: 215px;
+	z-index: 9999;
 }
 
 #pgw-gallery-medium a, #pgw-gallery-large a, #pgw-gallery-full a {
